# universal-etl-toolkit-python

./: .gitignore  README.md  pyproject.toml
data/: example_sales_raw.csv
examples/: etl_csv_to_csv.py
src/: universal_etl.py
tests/: test_universal_etl.py
